# zebra

./: .gitignore  Cargo.toml  pyproject.toml  zebra.toml
analysis/: analyse_results.ipynb  analysis.py  plot_sim.ipynb
docs/: analysis.py  obstacle_reaction_note.ipynb  plot_sim.ipynb
src/: config.rs  event_driven_sim.rs  events.rs  lib.rs  main.rs  obstacle.rs  pedestrian.rs  road.rs  simulation.rs  state.rs  time.rs  vehicle.rs
www/: index.js  package-lock.json  package.json
