[package]
name = "zebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~3.2", features=["derive", "cargo"] }
lazy_static = "~1"
rand="0.8.5"
rand_distr = "0.4.3"
serde = { version = "~1.0", features=["derive"] }
toml = "0.5.9"
serde_json = "1"
