[tool.poetry]
name = "zebra"
version = "0.1.0"
description = ""
authors = ["Zebra Devs"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
notebook = "^6.4.12"
numpy = "^1.23.1"
scipy = "^1.8.1"
matplotlib = "<3.3"
ipykernel = "^6.15.1"
toml = "^0.10.2"
pylint = "^2.14.5"
pandas = "^1.4.3"
jupyterlab = "^3.4.4"
Pillow = "^9.2.0"
tqdm = "^4.64.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
